<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_stories"
            android:icon="@drawable/ic_trending_up_black_18dp"
            android:title="@string/top_stories"/>
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_world_black_18dp"
            android:title="@string/society"/>
        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_politics_black_18dp"
            android:title="@string/politics"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_national"
                android:icon="@drawable/ic_domain_black_18dp"
                android:title="@string/national"/>

            <item
                android:id="@+id/nav_technology"
                android:icon="@drawable/ic_technology_black_18dp"
                android:title="@string/technology"/>
            <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_local_dining_black_18dp"
                android:title="@string/food"/>
            <item
                android:id="@+id/nav_travel"
                android:icon="@drawable/ic_travel_black_18dp"
                android:title="@string/travel"/>
        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_18dp"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_18dp"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>